// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordInput snapshots > matches snapshot — hidden 1`] = `
<div
  class="relative"
>
  <input
    class="px-3 py-2 flex w-full rounded-md border text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium border-input-border bg-input-surface text-input-foreground focus-visible:ring-ring pr-10"
    placeholder="Password"
    type="password"
  />
  <button
    class="absolute right-3 top-1/2 transform -translate-y-1/2 text-input-addon-foreground hover:text-foreground"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-eye h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
      />
      <circle
        cx="12"
        cy="12"
        r="3"
      />
    </svg>
  </button>
</div>
`;

exports[`PasswordInput snapshots > matches snapshot — visible 1`] = `
<div
  class="relative"
>
  <input
    class="px-3 py-2 flex w-full rounded-md border text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium border-input-border bg-input-surface text-input-foreground focus-visible:ring-ring pr-10"
    placeholder="Password"
    type="text"
  />
  <button
    class="absolute right-3 top-1/2 transform -translate-y-1/2 text-input-addon-foreground hover:text-foreground"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-eye-off h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
      />
      <path
        d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
      />
      <path
        d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
      />
      <path
        d="m2 2 20 20"
      />
    </svg>
  </button>
</div>
`;
